--- a/ActivateSprinklers/ActivateSprinklers.csproj
+++ b/ActivateSprinklers/ActivateSprinklers.csproj
@@ -63,6 +63,7 @@
     </None>
     <None Include="packages.config" />
   </ItemGroup>
+  <Import Project="..\Common\Common.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
