--- a/BreedLikeRabbits2/BreedLikeRabbits2.csproj
+++ b/BreedLikeRabbits2/BreedLikeRabbits2.csproj
@@ -17,7 +17,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>..\output\BreedLikeRabbits2\</OutputPath>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
