Update output paths; Remove BLR2 solution

--- a/BreedLikeRabbits2/BreedLikeRabbits2.csproj
+++ b/BreedLikeRabbits2/BreedLikeRabbits2.csproj
@@ -17,13 +17,13 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
-    <OutputPath>..\output\BreedLikeRabbits2\</OutputPath>
+    <OutputPath>..\output\debug\BreedLikeRabbits2\</OutputPath>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\output\release\BreedLikeRabbits2\</OutputPath>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
