--- a/PlantableMushroomTrees/PlantableMushroomTrees.csproj
+++ b/PlantableMushroomTrees/PlantableMushroomTrees.csproj
@@ -18,7 +18,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\output\PlantableMushroomTrees\</OutputPath>
+    <OutputPath>..\output\debug\PlantableMushroomTrees\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -27,13 +27,10 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\output\release\PlantableMushroomTrees\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Delete Anything|AnyCPU'">
-    <OutputPath>bin\Delete Anything\</OutputPath>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
