--- a/CustomWarps/CustomWarps.csproj
+++ b/CustomWarps/CustomWarps.csproj
@@ -10,4 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="3.0.0" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
+  </ItemGroup>
 </Project>
