--- a/GateFix/GateFix.csproj
+++ b/GateFix/GateFix.csproj
@@ -8,7 +8,7 @@
     <PlatformTarget>x86</PlatformTarget>
     <EnableHarmony>true</EnableHarmony>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-    <OutputPath>../_output/$(Configuration)/</OutputPath>
+    <ModZipPath>$(SolutionDir)\_releases</ModZipPath>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="3.0.0" />
