--- a/_old/WoodsDebrisFix/WoodsDebrisFix.csproj
+++ b/_old/WoodsDebrisFix/WoodsDebrisFix.csproj
@@ -7,7 +7,7 @@
     <Platforms>x86</Platforms>
     <PlatformTarget>x86</PlatformTarget>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-    <OutputPath>../_output/$(Configuration)/</OutputPath>
+    <ModZipPath>$(SolutionDir)\_releases</ModZipPath>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="3.0.0" />
