--- a/ActivateSprinklers/manifest.json
+++ b/ActivateSprinklers/manifest.json
@@ -1,10 +1,28 @@
 ﻿{
-    "Name": "Activate Sprinklers",
-	"Author": "f4iTh",
-	"Version": "1.2.4",
-	"UniqueID": "f4iTh.ActivateSprinklers",
-	"Description": "Activate sprinklers by right clicking them.",
-    "EntryDll": "ActivateSprinklers.dll",
-    "MinimumApiVersion": "3.0.0",
-    "UpdateKeys":  [ "Nexus:2088" ]
+  "Name": "Activate Sprinklers",
+  "Author": "f4iTh",
+  "Version": "1.3.0-beta.26042021",
+  "UniqueID": "f4iTh.ActivateSprinklers",
+  "Description": "Activate sprinklers by right clicking them.",
+  "EntryDll": "ActivateSprinklers.dll",
+  "MinimumApiVersion": "3.0.0",
+  "UpdateKeys": [ "GitHub:f4iTh/ActivateSprinklers" ],
+  "Dependencies": [
+    {
+      "UniqueID": "Speeder.BetterSprinklers",
+      "IsRequired": false
+    },
+    {
+      "UniqueID": "hootless.LineSprinklers",
+      "IsRequired": false
+    },
+    {
+      "UniqueID": "stokastic.PrismaticTools",
+      "IsRequired": false
+    },
+    {
+      "UniqueID": "tZed.SimpleSprinkler",
+      "IsRequired": false
+    }
+  ]
 }
