--- a/GateFix/GateFix.csproj
+++ b/GateFix/GateFix.csproj
@@ -4,7 +4,7 @@
     <RootNamespace>GateFix</RootNamespace>
     <Version>1.0.0</Version>
     <TargetFramework>net452</TargetFramework>
-    <Platforms>x86</Platforms>
+    <Platforms>x86;AnyCPU</Platforms>
     <PlatformTarget>x86</PlatformTarget>
     <EnableHarmony>true</EnableHarmony>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
