--- a/PlantableMushroomTrees/PlantableMushroomTrees.csproj
+++ b/PlantableMushroomTrees/PlantableMushroomTrees.csproj
@@ -4,7 +4,7 @@
     <RootNamespace>PlantableMushroomTrees</RootNamespace>
     <Version>1.0.0</Version>
     <TargetFramework>net452</TargetFramework>
-    <Platforms>x86</Platforms>
+    <Platforms>x86;AnyCPU</Platforms>
     <PlatformTarget>x86</PlatformTarget>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <ModZipPath>$(SolutionDir)\_releases</ModZipPath>
