--- a/PlantableMushroomTrees/PlantableMushroomTrees.csproj
+++ b/PlantableMushroomTrees/PlantableMushroomTrees.csproj
@@ -5,11 +5,12 @@
     <Version>1.0.0</Version>
     <TargetFramework>net452</TargetFramework>
     <Platforms>x86;AnyCPU</Platforms>
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <ModZipPath>$(SolutionDir)\_releases</ModZipPath>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="3.3.0" />
   </ItemGroup>
+  <Import Project="..\Common\Common.projitems" Label="Shared" />
 </Project>
