--- a/CustomWarps/manifest.json
+++ b/CustomWarps/manifest.json
@@ -1,10 +1,10 @@
 ﻿{
   "Name": "Custom Warps",
   "Author": "f4iTh",
-  "Version": "1.0.2",
+  "Version": "1.0.3",
   "Description": "Allows the player to set custom warps.",
   "UniqueID": "f4iTh.CustomWarps",
   "EntryDll": "CustomWarps.dll",
   "MinimumApiVersion": "3.0.0",
-  "UpdateKeys": [ "Nexus:3445" ]
+  "UpdateKeys": [ "GitHub:f4iTh/CustomWarps" ]
 }
