--- a/WheresMyItems/manifest.json
+++ b/WheresMyItems/manifest.json
@@ -1,10 +1,10 @@
 {
     "Name": "Where's My Items?",
     "Author": "f4iTh",
-    "Version": "1.1.2",
+    "Version": "1.1.3",
     "UniqueID": "f4iTh.WheresMyItems",
     "Description": "Helps you find the items you're seeking for.",
     "EntryDll": "WheresMyItems.dll",
-    "MinimumApiVersion": "2.10",
-    "UpdateKeys": [ "Nexus:2086" ]
+    "MinimumApiVersion": "3.0.0",
+    "UpdateKeys": [ "GitHub:f4iTh/WheresMyItems" ]
 }
