--- a/ParsnipsAbsolutelyEverywhereButItsGarlic/manifest.json
+++ b/ParsnipsAbsolutelyEverywhereButItsGarlic/manifest.json
@@ -6,5 +6,7 @@
   "UniqueID": "SolomonsWorkshop.ParsnipsAbsolutelyEverywhereButItsGarlic",
   "EntryDll": "ParsnipsAbsolutelyEverywhereButItsGarlic.dll",
   "MinimumApiVersion": "3.0.0",
-  "UpdateKeys": [ "GitHub:f4iTh/Garlic" ]
+  "UpdateKeys": [
+    "Nexus:3524"
+  ]
 }
