--- a/BreedLikeRabbits2/manifest.json
+++ b/BreedLikeRabbits2/manifest.json
@@ -6,5 +6,7 @@
   "Description": "Rabbits now breed like they're supposed to.",
   "EntryDll": "BreedLikeRabbits2.dll",
   "MinimumApiVersion": "2.10",
-  "UpdateKeys":  ["GitHub:f4iTh/BreedLikeRabbitsTwo"]
+  "UpdateKeys": [
+    "Nexus:3429"
+  ]
 }
