--- a/ActivateSprinklers/manifest.json
+++ b/ActivateSprinklers/manifest.json
@@ -1,7 +1,7 @@
 ﻿{
   "Name": "Activate Sprinklers",
   "Author": "f4iTh",
-  "Version": "1.4.0-dev",
+  "Version": "1.3.0",
   "UniqueID": "f4iTh.ActivateSprinklers",
   "Description": "Activate sprinklers by right clicking them.",
   "EntryDll": "ActivateSprinklers.dll",
