--- a/WheresMyItems/manifest.json
+++ b/WheresMyItems/manifest.json
@@ -1,7 +1,7 @@
 {
   "Name": "Where's My Items?",
   "Author": "f4iTh",
-  "Version": "1.2.0-dev",
+  "Version": "1.2.0",
   "UniqueID": "f4iTh.WheresMyItems",
   "Description": "Helps you find the items you're seeking for.",
   "EntryDll": "WheresMyItems.dll",
