--- a/ShowCatchQuality/ShowCatchQuality.csproj
+++ b/ShowCatchQuality/ShowCatchQuality.csproj
@@ -7,7 +7,7 @@
         <Platforms>AnyCPU</Platforms>
         <PlatformTarget>AnyCPU</PlatformTarget>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-        <ModZipPath>$(SolutionDir)\_releases</ModZipPath>
+        <ModZipPath>$(SolutionDir)releases\ShowCatchQuality</ModZipPath>
         <LangVersion>9</LangVersion>
     </PropertyGroup>
     <ItemGroup>
