--- a/BreedLikeRabbits2/BreedLikeRabbits2.csproj
+++ b/BreedLikeRabbits2/BreedLikeRabbits2.csproj
@@ -3,12 +3,12 @@
         <AssemblyName>BreedLikeRabbits2</AssemblyName>
         <RootNamespace>BreedLikeRabbits2</RootNamespace>
         <Version>1.0.0</Version>
-        <TargetFramework>net5.0</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <Platforms>AnyCPU</Platforms>
         <PlatformTarget>AnyCPU</PlatformTarget>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
         <ModZipPath>$(SolutionDir)releases\BreedLikeRabbits2</ModZipPath>
-        <LangVersion>9</LangVersion>
+        <LangVersion>latestmajor</LangVersion>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="4.1.1"/>
