Add solution folders and change project language versions

--- a/ActivateSprinklers/ActivateSprinklers.csproj
+++ b/ActivateSprinklers/ActivateSprinklers.csproj
@@ -12,7 +12,7 @@
         <IgnoreModFilePatterns>\.png$</IgnoreModFilePatterns>
         <EnableModDeploy>true</EnableModDeploy>
         <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
-        <LangVersion>latestmajor</LangVersion>
+        <LangVersion>12</LangVersion>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="4.1.1"/>
