--- a/ParsnipsAbsolutelyEverywhereButItsGarlic/ParsnipsAbsolutelyEverywhereButItsGarlic.csproj
+++ b/ParsnipsAbsolutelyEverywhereButItsGarlic/ParsnipsAbsolutelyEverywhereButItsGarlic.csproj
@@ -8,7 +8,7 @@
         <PlatformTarget>AnyCPU</PlatformTarget>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
         <ModZipPath>$(SolutionDir)releases\ParsnipsAbsolutelyEverywhereButItsGarlic</ModZipPath>
-        <LangVersion>latestmajor</LangVersion>
+        <LangVersion>12</LangVersion>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="4.1.1"/>
