Revert language versions
Builds were previous succeeding with C# 12.0 features even though only NET 6 is being used (which only goes up to C# 11.0)

--- a/AdjustBabyChance/AdjustBabyChance.csproj
+++ b/AdjustBabyChance/AdjustBabyChance.csproj
@@ -10,7 +10,7 @@
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
         <ModZipPath>$(SolutionDir)releases\AdjustBabyChance</ModZipPath>
         <EnableModDeploy>true</EnableModDeploy>
-        <LangVersion>12</LangVersion>
+        <LangVersion>latest</LangVersion>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="4.1.1"/>
