--- a/CustomWarps/CustomWarps.csproj
+++ b/CustomWarps/CustomWarps.csproj
@@ -8,7 +8,7 @@
         <PlatformTarget>AnyCPU</PlatformTarget>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
         <ModZipPath>$(SolutionDir)releases\CustomWarps</ModZipPath>
-        <LangVersion>12</LangVersion>
+        <LangVersion>latest</LangVersion>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="4.1.1"/>
